--- a/Раздел 5. Продвинутый JavaSript/97. Создаем калькулятор на сайте, часть 1/Food/index.html
+++ b/Раздел 5. Продвинутый JavaSript/97. Создаем калькулятор на сайте, часть 1/Food/index.html
@@ -196,23 +196,28 @@
           </div>
           <div class="calculating__choose calculating__choose_big">
             <div data-ratio="1.2" id="low" class="calculating__choose-item">
-              Низкая активность
+              Низкая активность <br />
+              0 раз в неделю
             </div>
             <div
               data-ratio="1.375"
               id="small"
               class="calculating__choose-item calculating__choose-item_active"
             >
-              Невысокая активность
+              Невысокая активность <br />
+              1-2 раза в неделю
             </div>
             <div data-ratio="1.55" id="medium" class="calculating__choose-item">
-              Умеренная активность
+              Умеренная активность <br />
+              3-4 раза в неделю
             </div>
             <div data-ratio="1.725" id="high" class="calculating__choose-item">
-              Высокая активность
+              Высокая активность <br />
+              5-6 раза в неделю
             </div>
             <div data-ratio="1.9" id="high" class="calculating__choose-item">
-              Очень высокая активность
+              Зверюга <br />
+              5-7 раза в неделю
             </div>
           </div>
 
