--- a/Раздел 5. Продвинутый JavaSript/86. Promise (ES6)/index.html
+++ b/Раздел 5. Продвинутый JavaSript/86. Promise (ES6)/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calc</title>
 
+    <script src="js/promise.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
