--- a/Раздел 2, Основы JavaScript/47. Рекурсия/index.html
+++ b/Раздел 2, Основы JavaScript/47. Рекурсия/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="script.js"></script> -->
-    <script src="fib.js"></script>
+    <script src="script.js"></script>
+    <!-- <script src="fib.js"></script> -->
   </body>
 </html>
