--- a/Раздел 3. Дополнительные основы JS/55. Живые коллекции и полезные методы/index.html
+++ b/Раздел 3. Дополнительные основы JS/55. Живые коллекции и полезные методы/index.html
@@ -11,7 +11,15 @@
     <div class="wrapper">
       <div class="box"></div>
       <div class="box this"></div>
-      <div class="box"></div>
+      <div class="box thrid"></div>
+      <div class="box fourth"></div>
+    </div>
+
+    <div class="section">
+      <div class="one"></div>
+      <div class="this"></div>
+      <div class="thrid"></div>
+      <div class="fourth"></div>
     </div>
 
     <script src="script.js"></script>
