--- a/Раздел 4. JavaScript в работе/63. ClassList и делегирование событий/index.html
+++ b/Раздел 4. JavaScript в работе/63. ClassList и делегирование событий/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <div id="first" class="btn-block">
-      <button class="blue some"></button>
+      <button class="blue red some next"></button>
       <button></button>
       <button></button>
       <button></button>
-      <button></button>
-      <button></button>
+      <button class="green"></button>
       <button></button>
       <button class="orange"></button>
+      <!-- <button class="orange"></button> -->
     </div>
 
     <script src="js/script.js"></script>
